fixed text-align

--- a/mystyle.css
+++ b/mystyle.css
@@ -207,7 +207,7 @@ body::after {
 
 .body-container .blog {
   background-color: #f7f7f7;
-  max-width: 600px;
+  max-width: 650px;
 }
 
 
